# app/models/documents.py
@@ -15,6 +15,7 @@ class DocumentType(str, enum.Enum):
     EDUCATIONAL_QUALIFICATION = "EDUCATIONAL_QUALIFICATION"
     PHOTOGRAPH = "PHOTOGRAPH"
     CANCELLED_CHEQUE = "CANCELLED_CHEQUE"
+    PASSBOOK = "PASSBOOK"
 
 
 class DocumentDetails(Base):
